--- a/frontend/my-app/src/CSS/navbar.css
+++ b/frontend/my-app/src/CSS/navbar.css
@@ -4,7 +4,10 @@
   justify-content: space-between;
   align-items: center;
   padding: 1rem 2rem;
-  background-color: rgb(159, 125, 125);
+  background-color: rgb(186, 108, 108);
+  opacity: 0.8;
+ 
+ 
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   position: fixed;
   top: 0;
@@ -20,15 +23,16 @@
 }
 
 .logo img {
-  width: 35px;
-  height: 35px;
+  width: 45px;
+  height: 45px;
   margin-right: 0.5rem;
 }
 
 .logo-text {
-  font-size: 1.5rem;
-  color: #923737;
-  font-weight: bold;
+  font-size: 2rem;
+  color: #fff;
+  font-family:"Arial, Helvetica, sans-serif";
+  font-weight: 700;
 }
 
 /* Navigation Links */
@@ -39,9 +43,10 @@
 
 .nav-links a {
   text-decoration: none;
-  font-size: 1rem;
-  color: #333;
-  padding: 0.5rem 1rem;
+  font-size: 1.2rem;
+  color: #fff;
+  font-family:"Arial, Helvetica, sans-serif";
+  padding-right: 3rem;
   transition: all 0.3s ease-in-out;
 }
 
@@ -49,14 +54,6 @@
   color: #923737;
 }
 
-/* Donate Button */
-.donate-btn {
- 
-  color: white;
-  padding: 0.5rem 1rem;
-  border-radius: 5px;
-  transition: all 0.3s ease-in-out;
-}
 
 
 /* Mobile Menu Icon */
