--- a/frontend/my-app/src/CSS/contact.css
+++ b/frontend/my-app/src/CSS/contact.css
@@ -44,7 +44,7 @@
     padding: 12px;
     border: none;
   
-    color: white;
+    color: black;
     border-radius: 5px;
     font-size: 16px;
     margin-bottom: 15px;
