--- a/frontend/my-app/src/CSS/donor.css
+++ b/frontend/my-app/src/CSS/donor.css
@@ -18,9 +18,28 @@
     font-weight: 700;
   }
 
+  .backToDashboard-btn{
+    background-color: green;
+    color: white;
+    padding: 10px 15px;
+    width: 125px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 14px;
+    margin-left: 39rem;
+
+  }
+
+  .backToDashboard-btn:hover {
+    background-color: #66b932;
+
+  }
+  
+
 
   
-  .logout-btn {
+ .logout-btn {
     background-color: #ff4d4d;
     color: white;
     padding: 10px 15px;
@@ -31,7 +50,7 @@
     font-size: 14px;
   }
   
-  .logout-btn:hover {
+   .logout-btn:hover {
     background-color: #cc0000;
 
   }
