--- a/frontend/my-app/src/CSS/homepage.css
+++ b/frontend/my-app/src/CSS/homepage.css
@@ -20,6 +20,18 @@ body, html {
   text-align: center;
 }
 
+.hero-2{
+  position: relative;
+  height: 100vh;
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+
+
 .hero-overlay {
   position: absolute;
   top: 0;
@@ -158,7 +170,7 @@ td:hover {
   justify-content: center;
   align-items: center;
   padding: 4rem 2rem;
-  background-color: #84a59d;
+  background-color: #7b6306;
   animation: fadeIn 1s ease-in-out;
 }
 
@@ -298,4 +310,53 @@ td:hover {
   to {
     text-shadow: 2px 2px 12px rgba(107, 19, 19, 0.8);
   }
+}
+
+
+/* Blood drop images */
+
+.drop-animate{
+ 
+  position: absolute;
+  z-index: 1;
+  padding-bottom: 4rem;
+
+}
+
+@keyframes drop {
+  0% {
+    transform: translateY(-50px) scale(1);
+    opacity: 1;
+  }
+  50% {
+    transform: translateY(0) scale(1.1);
+    opacity: 0.8;
+  }
+  50% {
+    transform: translateY(50px) scale(1);
+    opacity: 1;
+  }
+}
+
+@keyframes override-drop {
+  0% {
+    transform: translateY(-50px) scale(1);
+    opacity: 0.5;
+  }
+  50% {
+    transform: translateY(0) scale(1.2);
+    opacity: 0.7;
+  }
+  100% {
+    transform: translateY(50px) scale(1);
+    opacity: 0.5;
+  }
+}
+
+.drop-animate {
+  animation: drop 2s infinite alternate ease-in-out;
+}
+
+.drop-animate-override {
+  animation: override-drop 2s infinite alternate ease-in-out;
 }
