--- a/frontend/my-app/src/CSS/patient.css
+++ b/frontend/my-app/src/CSS/patient.css
@@ -16,6 +16,25 @@
   font-weight: 700;
 }
 
+.backToDashboard-btn{
+  background-color: green;
+  color: white;
+  padding: 10px 15px;
+  width: 125px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 14px;
+  margin-left: 39rem;
+
+}
+
+.backToDashboard-btn:hover {
+  background-color: #66b932;
+
+}
+
+
 .logout-btn {
   background-color: #ff4d4d;
   color: white;
