--- a/frontend/my-app/src/CSS/donor_patient_registrationform.css
+++ b/frontend/my-app/src/CSS/donor_patient_registrationform.css
@@ -19,6 +19,40 @@
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
 }
 
+/* Moving shapes */
+.shape1 {
+    position: absolute;
+    left: -15%;
+    top: 20%;
+    width: 150px;
+    height: 150px;
+    background-color: #923737;
+    border-radius: 50%;
+    animation: moveShapes 5s infinite ease-in-out;
+  }
+  
+  .shape1:nth-child(2) {
+    top: 70%;
+    left: 70%;
+    animation-duration: 5s;
+  }
+  
+  
+  
+  
+  
+  @keyframes moveShapes {
+    0% {
+      transform: translate(0, 0);
+    }
+    50% {
+      transform: translate(50px, 50px);
+    }
+    100% {
+      transform: translate(0, 0);
+    }
+  }
+
 .donor_patient_registrationform_section-container h2 {
     color: #fff;
     font-size: 24px;
