--- a/frontend/my-app/src/CSS/navbar.css
+++ b/frontend/my-app/src/CSS/navbar.css
@@ -43,7 +43,8 @@
 
 .nav-links a {
   text-decoration: none;
-  font-size: 1.2rem;
+  padding-top: .4rem;
+  font-size: 1.3rem;
   color: #fff;
   font-family:"Arial, Helvetica, sans-serif";
   padding-right: 3rem;
@@ -54,6 +55,17 @@
   color: #923737;
 }
 
+.logout-button {
+  background: none;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  height: 45px;
+  background-color: rgb(203, 199, 61);
+}
+
+
+
 
 
 /* Mobile Menu Icon */
@@ -63,6 +75,8 @@
   cursor: pointer;
   color: #923737;
 }
+
+
 
 /* Responsive Design */
 @media (max-width: 768px) {
