--- a/frontend/my-app/src/CSS/homepage.css
+++ b/frontend/my-app/src/CSS/homepage.css
@@ -172,7 +172,7 @@ td:hover {
   justify-content: center;
   align-items: center;
   padding: 4rem 2rem;
-  background-color: #7b6306;
+  background-color: #ffd8f1;
   animation: fadeIn 1s ease-in-out;
 }
 
